--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <!--heading 1em= 16px-->
-    <h1>Esto es un titulo h1</h1>
+    <h1 id="titulo1">Esto es un titulo h1</h1>
     <h2>Esto es un titulo h2</h2>
     <h3>Esto es un titulo h3</h3>
     <h4>Esto es un titulo h4</h4>
@@ -20,6 +20,85 @@
     <br>
     <!--hr linea horizontal-->
     <hr>
+    <!--Parrafos-->
+    <p><b>Lorem ipsum,</b> <i>dolor sit amet </i>consectetur adipisicing elit. Modi laborum ipsum, ipsa consequuntur accusantium odit quasi praesentium aut laboriosam ab sequi quidem perferendis quia repellat odio asperiores. Ipsam, non officiis?</p>
+
+    <p><strong><i><u>Lorem ipsum dolor sit amet, consectetur adipis</u></i></strong></p>
+
+    <!--Links (anchor tag) (href)-->
+    <a href="https://www.w3schools.com"> W3School</a><br>
+    <a href="https://www.emol.com" target="_blank"> EL Diario</a><br>
+    <!--Redireccionar a otra pagina interna-->
+    <a href="index2.html">Otra pagina</a>
+    <br>
+    <!--Link con imagen-->
+    <a href="http://www.github.com" target="_blank">
+        <img src="assets/img/git.jpg">
+    </a>"
+    <br>
+    <!--Link dentro de la pagina-->
+    <a href="#titulo1">titulo</a>
+    <br>
+    <!--Listas(ordenadas OL y no ordenadas UL)-->
+    <!--li list items-->
+    <ol>
+        <li>uno</li>
+        <li>dos</li>
+        <li>tres</li>
+    </ol>
+    <ul>
+        <li>uno</li>
+        <li>dos</li>
+        <li>tres</li>
+    </ul>
+    <!---->
+    <ul>
+        <li>uno
+            <ul>
+                <li>uno uno
+                    <ul>
+                        <li>uno uno uno</li>
+                        <li>uno uno dos</li>
+                    </ul>
+                </li>
+                <li>uno dos</li>
+            </ul>
+        </li>
+        <li>dos</li>
+        <li>tres</li>
+    </ul>
+    <br>
+    <hr>
+    <!--Imagenes-->
+    <img src="assets/img/Leona-16g00x-1.jpg" alt="Leona">
+    <img src="assets/img/Cegbras-1000x-1.jpg" alt="Cebra">
+    <img src="assets/img/buhgo.jpg" alt="Buho">
+    <br>
+    <hr>
+    <!--Tablas-->
+
+    <table>
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Nombre</th>
+                <th>Apellido</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>German</td>
+                <td>Pinto</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Isra</td>
+                <td>Palma</td>
+            </tr>
+        </tbody>
+    </table>
+
 
 
 </body>
